P2Pmsgcore/native/P2Pmsgcore_c.h

typedef void* P2PeerMsgHandle;
typedef void* P2PeerConWsaHandle;
typedef void* P2PeerHubHandle;
P2PC_API void               p2peerhub_close_hub      (P2PeerHubHandle h);
P2PC_API void               p2peerhub_pause_hub      (P2PeerHubHandle h);
P2PC_API void               p2peerhub_wakeup_hub     (P2PeerHubHandle h);
// PostP2PeerCon passes ownership of the connection to the hub.
P2PC_API int                p2peerhub_post_con       (P2PeerHubHandle    hub,
                                                       P2PeerConWsaHandle con,
                                                       unsigned int       pumpID);
P2PC_API int                p2peerhub_con_exists     (P2PeerHubHandle h, const wchar_t* addr);
// PostP2PeerMsg takes ownership; do not destroy msg after this call.
P2PC_API P2PeerMsgHandle    p2peerhub_post_msg       (P2PeerHubHandle h, P2PeerMsgHandle msg);
P2PC_API unsigned long      p2peerhub_get_hub_id     (P2PeerHubHandle h);
P2PC_API const wchar_t*     p2peerhub_get_address    (P2PeerHubHandle h);