P2Pmsgcore/java/src/main/java/com/p2pmsgcore/native_/P2Pmsgcore_c.java


    /**
     * {@snippet lang=c :
     * void p2peerhub_close_hub(P2PeerHubHandle h)
     * }
     */
    public static void p2peerhub_close_hub(MemorySegment h) {
        var mh$ = p2peerhub_close_hub.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_close_hub", h);
            }
            mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_pause_hub {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_pause_hub").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2peerhub_pause_hub(P2PeerHubHandle h)
     * }
     */
    public static FunctionDescriptor p2peerhub_pause_hub$descriptor() {
        return p2peerhub_pause_hub.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2peerhub_pause_hub(P2PeerHubHandle h)
     * }
     */
    public static MethodHandle p2peerhub_pause_hub$handle() {
        return p2peerhub_pause_hub.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2peerhub_pause_hub(P2PeerHubHandle h)
     * }
     */
    public static MemorySegment p2peerhub_pause_hub$address() {
        return p2peerhub_pause_hub.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void p2peerhub_pause_hub(P2PeerHubHandle h)
     * }
     */
    public static void p2peerhub_pause_hub(MemorySegment h) {
        var mh$ = p2peerhub_pause_hub.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_pause_hub", h);
            }
            mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_wakeup_hub {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_wakeup_hub").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2peerhub_wakeup_hub(P2PeerHubHandle h)
     * }
     */
    public static FunctionDescriptor p2peerhub_wakeup_hub$descriptor() {
        return p2peerhub_wakeup_hub.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2peerhub_wakeup_hub(P2PeerHubHandle h)
     * }
     */
    public static MethodHandle p2peerhub_wakeup_hub$handle() {
        return p2peerhub_wakeup_hub.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2peerhub_wakeup_hub(P2PeerHubHandle h)
     * }
     */
    public static MemorySegment p2peerhub_wakeup_hub$address() {
        return p2peerhub_wakeup_hub.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void p2peerhub_wakeup_hub(P2PeerHubHandle h)
     * }
     */
    public static void p2peerhub_wakeup_hub(MemorySegment h) {
        var mh$ = p2peerhub_wakeup_hub.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_wakeup_hub", h);
            }
            mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_post_con {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_post_con").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2peerhub_post_con(P2PeerHubHandle hub, P2PeerConWsaHandle con, unsigned int pumpID)
     * }
     */
    public static FunctionDescriptor p2peerhub_post_con$descriptor() {
        return p2peerhub_post_con.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2peerhub_post_con(P2PeerHubHandle hub, P2PeerConWsaHandle con, unsigned int pumpID)
     * }
     */
    public static MethodHandle p2peerhub_post_con$handle() {
        return p2peerhub_post_con.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2peerhub_post_con(P2PeerHubHandle hub, P2PeerConWsaHandle con, unsigned int pumpID)
     * }
     */
    public static MemorySegment p2peerhub_post_con$address() {
        return p2peerhub_post_con.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2peerhub_post_con(P2PeerHubHandle hub, P2PeerConWsaHandle con, unsigned int pumpID)
     * }
     */
    public static int p2peerhub_post_con(MemorySegment hub, MemorySegment con, int pumpID) {
        var mh$ = p2peerhub_post_con.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_post_con", hub, con, pumpID);
            }
            return (int)mh$.invokeExact(hub, con, pumpID);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_con_exists {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_con_exists").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2peerhub_con_exists(P2PeerHubHandle h, const wchar_t *addr)
     * }
     */
    public static FunctionDescriptor p2peerhub_con_exists$descriptor() {
        return p2peerhub_con_exists.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2peerhub_con_exists(P2PeerHubHandle h, const wchar_t *addr)
     * }
     */
    public static MethodHandle p2peerhub_con_exists$handle() {
        return p2peerhub_con_exists.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2peerhub_con_exists(P2PeerHubHandle h, const wchar_t *addr)
     * }
     */
    public static MemorySegment p2peerhub_con_exists$address() {
        return p2peerhub_con_exists.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2peerhub_con_exists(P2PeerHubHandle h, const wchar_t *addr)
     * }
     */
    public static int p2peerhub_con_exists(MemorySegment h, MemorySegment addr) {
        var mh$ = p2peerhub_con_exists.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_con_exists", h, addr);
            }
            return (int)mh$.invokeExact(h, addr);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_post_msg {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_post_msg").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peerhub_post_msg(P2PeerHubHandle h, P2PeerMsgHandle msg)
     * }
     */
    public static FunctionDescriptor p2peerhub_post_msg$descriptor() {
        return p2peerhub_post_msg.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peerhub_post_msg(P2PeerHubHandle h, P2PeerMsgHandle msg)
     * }
     */
    public static MethodHandle p2peerhub_post_msg$handle() {
        return p2peerhub_post_msg.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peerhub_post_msg(P2PeerHubHandle h, P2PeerMsgHandle msg)
     * }
     */
    public static MemorySegment p2peerhub_post_msg$address() {
        return p2peerhub_post_msg.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peerhub_post_msg(P2PeerHubHandle h, P2PeerMsgHandle msg)
     * }
     */
    public static MemorySegment p2peerhub_post_msg(MemorySegment h, MemorySegment msg) {
        var mh$ = p2peerhub_post_msg.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_post_msg", h, msg);
            }
            return (MemorySegment)mh$.invokeExact(h, msg);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_get_hub_id {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_LONG,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_get_hub_id").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned long p2peerhub_get_hub_id(P2PeerHubHandle h)
     * }
     */
    public static FunctionDescriptor p2peerhub_get_hub_id$descriptor() {
        return p2peerhub_get_hub_id.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned long p2peerhub_get_hub_id(P2PeerHubHandle h)
     * }
     */
    public static MethodHandle p2peerhub_get_hub_id$handle() {
        return p2peerhub_get_hub_id.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned long p2peerhub_get_hub_id(P2PeerHubHandle h)
     * }
     */
    public static MemorySegment p2peerhub_get_hub_id$address() {
        return p2peerhub_get_hub_id.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned long p2peerhub_get_hub_id(P2PeerHubHandle h)
     * }
     */
    public static int p2peerhub_get_hub_id(MemorySegment h) {
        var mh$ = p2peerhub_get_hub_id.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_get_hub_id", h);
            }
            return (int)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_get_address {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_get_address").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
